Enable debug mode and add debug indicator in UI
- Set DEBUG_ENABLED = true in content.js and debug.js
- Add debug indicator badge in popup header (only shows when debug enabled)
- Expose DEBUG_ENABLED on window.debug for UI checks

--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,10 @@
         <h1>Logic Checker</h1>
       </div>
       <p class="tagline">Spotting fallacies so you don't have to</p>
+      <div id="debug-indicator" class="debug-indicator hidden">
+        <span class="debug-icon">🐛</span>
+        <span class="debug-text">Debug Mode</span>
+      </div>
     </header>
 
     <div id="api-key-section" class="section">
