Refactor prompt to aligned style, remove explicit fallacy types
- Replace structured prompt with aligned, principle-based approach
- Remove 'type' field from JSON (no more explicit fallacy names)
- Update UI to show importance badges instead of fallacy types
- Update messaging: 'logical gaps' instead of 'fallacies'
- Add graceful handling for missing type field in display code

--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
         <span class="icon">⚖️</span>
         <h1>Logic Checker</h1>
       </div>
-      <p class="tagline">Spotting logical gaps so you don't have to</p>
+      <p class="tagline">Spotting fallacies so you don't have to</p>
       <div id="debug-indicator" class="debug-indicator hidden">
         <span class="debug-icon">🐛</span>
         <span class="debug-text">Debug Mode</span>
@@ -51,7 +51,7 @@
     <div id="action-section" class="section hidden">
       <button id="analyze-btn" class="btn-primary">
         <span class="btn-icon">🧠</span>
-        Analyze Logic
+        Analyze for Fallacies
       </button>
     </div>
 
