--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Logic Checker</title>
+  <title>SanityCheck</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,10 +13,10 @@
   <div class="container">
     <header>
       <div class="logo">
-        <span class="icon">⚖️</span>
-        <h1>Logic Checker</h1>
+        <span class="icon">🧠</span>
+        <h1>SanityCheck</h1>
       </div>
-      <p class="tagline">Spotting logical gaps so you don't have to</p>
+      <p class="tagline">Keep your reasoning sharp</p>
       <div id="debug-indicator" class="debug-indicator hidden">
         <span class="debug-icon">🐛</span>
         <span class="debug-text">Debug Mode</span>
