Add customizable system prompt with settings page
Features:
- Settings page (settings.html) to edit the analysis prompt
- Per-user prompt storage in chrome.storage.local
- Settings button (gear icon) in popup header
- Track whether prompt is custom vs default

Database:
- Add promptUsed and isCustomPrompt fields to Analysis table
- Store full prompt with each analysis for reproducibility

Extension:
- Load custom prompt on popup init
- Send prompt info when storing analysis to backend
- Settings page matches extension styling

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -12,9 +12,12 @@
 <body>
   <div class="container">
     <header>
-      <div class="logo">
-        <span class="icon">🧠</span>
-        <h1>SanityCheck</h1>
+      <div class="header-row">
+        <div class="logo">
+          <span class="icon">🧠</span>
+          <h1>SanityCheck</h1>
+        </div>
+        <button id="settings-btn" class="settings-btn" title="Settings">⚙️</button>
       </div>
       <p class="tagline">Keep your reasoning sharp</p>
       <div id="debug-indicator" class="debug-indicator hidden">
