Switch from Replicate to Anthropic direct API for faster responses
- Replace Replicate polling API with Anthropic direct API
- Use Claude Sonnet 4.5 (claude-sonnet-4-20250514)
- Remove polling overhead - single request/response
- Update UI text from Replicate to Anthropic
- Update manifest permissions
- Expected 3-5x speedup (2-5s vs 10-30s)

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -27,12 +27,12 @@
     </header>
 
     <div id="api-key-section" class="section">
-      <label for="api-key">Replicate API Key</label>
+      <label for="api-key">Anthropic API Key</label>
       <div class="input-group">
-        <input type="password" id="api-key" placeholder="r8_xxxxxxxxxxxx">
+        <input type="password" id="api-key" placeholder="sk-ant-api03-...">
         <button id="save-key" class="btn-secondary">Save</button>
       </div>
-      <p class="hint">Get your key at <a href="https://replicate.com/account/api-tokens" target="_blank">replicate.com</a></p>
+      <p class="hint">Get your key at <a href="https://console.anthropic.com/" target="_blank">console.anthropic.com</a></p>
     </div>
 
     <div id="status-section" class="section">
