--- a/extension/settings.html
+++ b/extension/settings.html
@@ -228,7 +228,7 @@
         API Configuration
       </h3>
       <p>
-        Your Replicate API key is stored locally and used to run the AI analysis.
+        Your Anthropic API key is stored locally and used to run the AI analysis.
       </p>
       
       <div class="input-group">
