Add Miss Information background image with semi-transparent overlay

--- a/src/extension/static/welcome.html
+++ b/src/extension/static/welcome.html
@@ -53,6 +53,19 @@
       --accent-subtle: rgba(192, 132, 252, 0.12);
       --border: rgba(192, 132, 252, 0.15);
       --border-strong: rgba(192, 132, 252, 0.25);
+      
+      /* Background image - from missBackgroundCss() in colors.ts */
+      background: 
+        linear-gradient(
+          to bottom,
+          rgba(26, 21, 32, 0.85) 0%,
+          rgba(26, 21, 32, 0.75) 50%,
+          rgba(26, 21, 32, 0.9) 100%
+        ),
+        url('icons/missinfo_bg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
     }
     
     /* ===== Theme Toggle ===== */
