Fix missinfo_bg.jpg path reference in welcome.html

--- a/src/extension/static/welcome.html
+++ b/src/extension/static/welcome.html
@@ -62,7 +62,7 @@
           rgba(26, 21, 32, 0.75) 50%,
           rgba(26, 21, 32, 0.9) 100%
         ),
-        url('icons/missinfo_bg.jpg');
+        url('missinfo_bg.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
