--- a/src/extension/static/welcome.html
+++ b/src/extension/static/welcome.html
@@ -633,6 +633,8 @@
       <p>
         <a href="https://sanitycheck-production.up.railway.app" target="_blank">Homepage</a>
         &nbsp;·&nbsp;
+        <a href="https://sanitycheck-production.up.railway.app/faq" target="_blank">FAQ</a>
+        &nbsp;·&nbsp;
         <a href="#" id="settings-link">Settings</a>
       </p>
     </div>
