--- a/src/extension/static/popup.html
+++ b/src/extension/static/popup.html
@@ -4,16 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SanityCheck</title>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Miss Information theme CSS variables */
+    body.theme-miss {
+      --bg-primary: #1a1520;
+      --bg-secondary: #231d2b;
+      --bg-tertiary: #2d2638;
+      --bg-hover: #3a3245;
+      --text-primary: #f5f0fa;
+      --text-secondary: #c4b8d4;
+      --text-muted: #8b7fa3;
+      --accent: #c084fc;
+      --accent-hover: #d8b4fe;
+      --accent-subtle: rgba(192, 132, 252, 0.12);
+      --border: rgba(192, 132, 252, 0.15);
+      --border-strong: rgba(192, 132, 252, 0.25);
+    }
+    
+    /* Miss Information theme fonts */
+    body.theme-miss {
+      font-family: 'Quicksand', 'Comfortaa', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    }
+    
+    body.theme-miss h1 {
+      font-family: 'Comfortaa', 'Quicksand', cursive;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <header>
       <div class="header-row">
         <div class="logo">
-          <svg class="logo-icon" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"/>
-          </svg>
+          <img class="logo-icon" src="icon48.png" alt="SanityCheck logo">
           <h1>SanityCheck</h1>
         </div>
         <button id="settings-btn" class="settings-btn" title="Settings">
