missinfo popup css

--- a/src/extension/static/welcome.html
+++ b/src/extension/static/welcome.html
@@ -566,13 +566,13 @@
       <div class="theme-toggle" id="theme-toggle">
         <div class="theme-toggle-slider"></div>
       </div>
-      <span class="theme-label" id="label-miss">Miss Info</span>
+      <span class="theme-label" id="label-miss">Miss Information</span>
     </div>
 
     <div class="hero">
       <h1>
         <span class="logo-sanity">Sanity<span class="accent">Check</span></span>
-        <span class="logo-miss">Miss <span class="accent">Info</span><span class="miss-heart">♡</span><span class="sparkle">✧</span></span>
+        <span class="logo-miss">Miss <span class="accent">Information</span><span class="miss-heart">♡</span><span class="sparkle">✧</span></span>
       </h1>
       <p class="tagline">
         <span class="logo-sanity">Identify logical fallacies in what you read.</span>
