--- a/src/extension/static/popup.html
+++ b/src/extension/static/popup.html
@@ -31,6 +31,12 @@
     body.theme-miss h1 {
       font-family: 'Comfortaa', 'Quicksand', cursive;
     }
+    
+    /* Title variants */
+    .title-sanity { display: inline; }
+    .title-miss { display: none; }
+    body.theme-miss .title-sanity { display: none; }
+    body.theme-miss .title-miss { display: inline; }
   </style>
 </head>
 <body>
@@ -39,7 +45,10 @@
       <div class="header-row">
         <div class="logo">
           <img class="logo-icon" src="icon48.png" alt="SanityCheck logo">
-          <h1>SanityCheck</h1>
+          <h1>
+            <span class="title-sanity">SanityCheck</span>
+            <span class="title-miss">Miss Information</span>
+          </h1>
         </div>
         <button id="settings-btn" class="settings-btn" title="Settings">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
